CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(objectloader)

SET(OBJECLOADER_ROOT_PATH ${PROJECT_BINARY_DIR})
SET(OBJECLOADER_SOURCE_PATH ${OBJECLOADER_ROOT_PATH}/src)
SET(OBJECLOADER_BIN_PATH ${OBJECLOADER_ROOT_PATH}/bin)
SET(OBJECLOADER_EXEC_NAME objectloader)
SET(OBJECLOADER_TEST_EXEC_NAME objectloader_test)

SET(EXECUTABLE_OUTPUT_PATH ${OBJECLOADER_BIN_PATH})

FILE(GLOB_RECURSE OBJECLOADER_SOURCE_FILES ${OBJECLOADER_SOURCE_PATH}/*.cpp)

SET(CMAKE_CXX_FLAGS "-g -Wall")

ADD_EXECUTABLE(${OBJECLOADER_EXEC_NAME} ${OBJECLOADER_SOURCE_FILES})

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  TARGET_LINK_LIBRARIES(${OBJECLOADER_EXEC_NAME} -lopengl32 -lglu32 -lfreeglut -lglaux -lglew32)
ENDIF()
IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  TARGET_LINK_LIBRARIES(${OBJECLOADER_EXEC_NAME} -lGL -lGLU -lglut -lSDL)
ENDIF()


INSTALL(TARGETS ${OBJECLOADER_EXEC_NAME} DESTINATION /usr/bin/)
